# tironi-outreach

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: daily-outreach.yml  send-test-email.yml
sql/: 001_outreach.sql  002_message_sequence.sql
src/outreach/: api.py  campaign.py  cli.py  config.py  db.py  security.py  service.py  worker.py
src/outreach/providers/: base.py  brevo_smtp.py
tests/: test_core.py
