[project]
name = "tironi-outreach"
version = "1.0.0"
description = "Orquestrador seguro de prospecção B2B com Brevo SMTP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "psycopg[binary]>=3.2,<4",
  "python-dotenv>=1.1,<2",
  "pydantic>=2.11,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.12,<1"]

[project.scripts]
outreach = "outreach.cli:main"
outreach-worker = "outreach.worker:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

